# songsnip

./: README.md  main.py  pyproject.toml
aligner/: __main__.py  aligner.py
audio/: cli.py  preprocess.py  splitter.py
lyric/: __init__.py  __main__.py  cli.py  scraper.py
